# grok-switch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  release-notes-v0.1.0.md  tsconfig.json  tsconfig.node.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md
docs/superpowers/plans/: 2026-07-13-grok-switch.md  smoke-checklist.md
docs/superpowers/specs/: 2026-07-13-grok-switch-design.md
scripts/: make_grok_icon.py
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: account_store.rs  activity.rs  auth_vault.rs  backup.rs  ccswitch_import.rs  cli_status.rs  config_writer.rs  db.rs  error.rs  health.rs  mask.rs  mcp_store.rs  mod.rs  normalize.rs  paths.rs  pool.rs  provider_store.rs  proxy.rs  settings_store.rs  skill_store.rs  startup.rs  terminal.rs  types.rs
src-tauri/tests/fixtures/: sample_config.toml
src/components/: ProviderForm.tsx  Sidebar.tsx  StatusPill.tsx  SwitchOverlay.tsx  Toast.tsx
src/lib/: api.ts  mask.ts  providerUtils.ts  types.ts
src/pages/: AccountsPage.tsx  ActivityPage.tsx  ImportPage.tsx  McpPage.tsx  OverviewPage.tsx  ProvidersPage.tsx  SettingsPage.tsx  SkillsPage.tsx
