[package]
name = "grok-switch"
version = "0.1.0"
description = "Local desktop switcher for Grok CLI providers and official accounts"
authors = ["Grok Switch contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ibi6/grok-switch"
homepage = "https://github.com/ibi6/grok-switch"
keywords = ["grok", "tauri", "cli", "provider", "desktop"]
categories = ["gui", "command-line-utilities"]

[lib]
name = "grok_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "6"
regex = "1"

[dev-dependencies]
tempfile = "3"
